test(test): 섹터 분석 및 AI 프로세서 단위 테스트 작성